kubernetes/petclinic.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: default
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: default
  labels:
    app: petclinic
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: spring-petclinic-data-jdbc:2.3.0.RC1 
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: log-mount
          mountPath: /logs/petclinic
        securityContext:
          runAsUser: 1000
        readinessProbe:
          httpGet: 
            path: /manage/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
      volumes:
      - name: log-mount
        hostPath:
          path: /logs
      terminationGracePeriodSeconds: 30
